Add lsof as a dependency

--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -71,6 +71,7 @@ Depends: alembic,
          gdisk,
          ipmitool,
          lshw,
+         lsof,
          mdadm,
          migrate113,
          migrate93,
